# Logi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CppProperties.json  DoxygenConfig  ExternalDependencies.cmake  LICENSE  README.md  resharper_config.DotSettings
examples/base/: CMakeLists.txt
examples/base/include/: example_base.h  imGUI_base.h  stb_image.h  utility.h  vulkanState.h
examples/base/src/: ExampleBase.cpp  ExampleBase.cpp.old  GLFWManager.cpp  Monitor.cpp  Window.cpp  example_base.cpp  framebuffer.cpp  imGUI_base.cpp  utility_bufferManipulation.cpp  utility_commandBuffer.cpp  utility_imageManipulation.cpp  utility_objLoad.cpp  utility_shaderLoad.cpp
examples/basic_path_tracing/: CMakeLists.txt  main.cpp
examples/basic_path_tracing/microWS/: CMakeLists.txt
examples/basic_path_tracing/shaders/: pathtrace.comp  triangle.frag  triangle.vert
examples/dynamic_uniform_buffers/: CMakeLists.txt  main.cpp
examples/remote_path_tracing/: CMakeLists.txt  main.cpp  main.cpp~RF27c82ba4.TMP
examples/remote_path_tracing/microWS/: CMakeLists.txt
examples/remote_path_tracing/shaders/: pathtrace.comp  triangle.frag
examples/texture/: CMakeLists.txt
examples/texture/include/: texture.h
examples/texture/shaders/: texture.frag  texture.vert
examples/texture/src/: main.cpp  texture.cpp
libs/: CMakeLists.txt
libs/spirv-cross/: CMakeLists.txt
libs/spirv-cross/src/: spirv_cross.cpp
libs/vma/: CMakeLists.txt  vk_mem_alloc.h
src/: CMakeLists.txt  RendererBase.cpp  SwapChain.cpp  VulkanDevice.cpp  main.cpp  main.cpp.omit  vk_command_buffer.cpp  vk_device.cpp  vk_device_manager.cpp  vk_instance_manager.cpp  vk_program_manager.cpp  vk_queue.cpp  vk_queue_family.cpp  vk_swapchain.cpp  vk_texture.cpp
src/base/: Exceptions.cpp  ExtensionObject.cpp  Handle.cpp  LogicalDevice.cpp  ManagedResource.cpp  PhysicalDevice.cpp  PipelineResources.cpp  PipelineState.cpp  ProgramManager.cpp  ProgramManager.cppold  RendererBase.cpp  ShaderManager.cpp  SwapChain.cpp  VulkanDevice.cpp  VulkanInstance.cpp
src/commands/: CommandBuffer.cpp  CommandPool.cpp  PrimaryCommandBuffer.cpp  SecondaryCommandBuffer.cpp
src/descriptors/: DecriptorsUpdate.cpp  DescriptorPool.cpp  DescriptorSet.cpp
src/examples/: .ExampleA.cpp.swp  ExampleA.cpp  ExampleA.cpp.old  ExampleB.cpp.old  ExampleGraphics.cpp  lodepng.cpp
src/logi/base/: exception.cpp  vulkan_object.cpp
src/logi/command/: command_buffer.cpp  command_buffer_impl.cpp  command_pool.cpp  command_pool_impl.cpp
src/logi/descriptor/: descriptor_pool.cpp  descriptor_pool_impl.cpp  descriptor_set.cpp  descriptor_set_impl.cpp  descriptor_update_template.cpp  descriptor_update_template_impl.cpp
src/logi/device/: display_khr.cpp  display_khr_impl.cpp  display_mode_khr.cpp  display_mode_khr_impl.cpp  logical_device.cpp  logical_device_impl.cpp  physical_device.cpp  physical_device_impl.cpp
src/logi/instance/: debug_report_callback.cpp  debug_report_callback_impl.cpp  debug_utils_messenger_ext.cpp  debug_utils_messenger_impl_ext.cpp  vulkan_instance.cpp  vulkan_instance_impl.cpp
src/logi/memory/: acceleration_structure_khr.cpp  acceleration_structure_khr_impl.cpp  acceleration_structure_nv.cpp  acceleration_structure_nv_impl.cpp  buffer.cpp  buffer_impl.cpp  buffer_view.cpp  buffer_view_impl.cpp  device_memory.cpp  device_memory_impl.cpp  image.cpp  image_impl.cpp  image_view.cpp  image_view_impl.cpp  memory_allocator.cpp  memory_allocator_impl.cpp  sampler.cpp  sampler_impl.cpp  sampler_ycbcr_conversion.cpp  sampler_ycbcr_conversion_impl.cpp  vma_acceleration_structure_khr.cpp.deprecated  vma_acceleration_structure_khr_impl.cpp.deprecated  vma_acceleration_structure_nv.cpp  vma_acceleration_structure_nv_impl.cpp  vma_buffer.cpp  vma_buffer_impl.cpp  vma_image.cpp  vma_image_impl.cpp
src/logi/nvidia/: acceleration_structure_nv.cpp  acceleration_structure_nv_impl.cpp  indirect_commands_layout_ndx.cpp  indirect_commands_layout_ndx_impl.cpp  indirect_commands_layout_nv.cpp  indirect_commands_layout_nv_impl.cpp  indirect_commands_layout_nvx.cpp  indirect_commands_layout_nvx_impl.cpp  object_table_nvx.cpp  object_table_nvx_deprecated.cpp  object_table_nvx_impl.cpp  object_table_nvx_impl_deprecated.cpp
src/logi/program/: descriptor_set_layout.cpp  descriptor_set_layout_impl.cpp  pipeline.cpp  pipeline_cache.cpp  pipeline_cache_impl.cpp  pipeline_impl.cpp  pipeline_layout.cpp  pipeline_layout_impl.cpp  shader_module.cpp  shader_module_impl.cpp  validation_cache_ext.cpp  validation_cache_ext_impl.cpp
src/logi/query/: query_pool.cpp  query_pool_impl.cpp
src/logi/queue/: queue.cpp  queue_family.cpp  queue_family_impl.cpp  queue_impl.cpp
src/logi/render_pass/: framebuffer.cpp  framebuffer_impl.cpp  render_pass.cpp  render_pass_impl.cpp
src/logi/shader_reflection/: shader_reflector.cpp  shader_reflector.cpp.deprecated
src/logi/structures/: structure.cpp  structure.cpp.deprecated  vk_structures.cpp  vk_structures.cpp.deprecated
src/logi/surface/: surface.cpp  surface_impl.cpp  surface_khr.cpp  surface_khr_impl.cpp
src/logi/swapchain/: swapchain_image.cpp  swapchain_image_impl.cpp  swapchain_khr.cpp  swapchain_khr_impl.cpp
src/logi/synchronization/: deferred_operation_khr.cpp  event.cpp  event_impl.cpp  (+5 more)
src/memory/: AllocationManager.cpp  Buffer.cpp  BufferView.cpp  Framebuffer.cpp  Image.cpp  ImageView.cpp  Sampler.cpp
src/program/: ComputePipeline.cpp  GraphicalPipeline.cpp  ProgramManager.cpp  ShaderManager.cpp
src/program_management/: ComputePipeline.cpp  PipelineLayout.cpp  ProgramManager.cpp  ShaderManager.cpp
src/query/: QueryPool.cpp
src/queues/: Queue.cpp  QueueFamily.cpp  QueueManager.cpp
src/shaders/: base.frag  base.vert  comp.spv  compile_shaders.py  fibbonaci.comp  pathtrace_vol.comp  shaders_map.json  shaders_metadata.json
src/synchronization/: Event.cpp  Fence.cpp  Semaphore.cpp
src/util/: FormatConversion.cpp  helpers.cpp
src/volumetric/: VolumetricRenderer.cpp
test/: CMakeLists.txt
test/base/: CMakeLists.txt  test_PipelineState.cpp
test/libs/: CMakeLists.txt
(+2837 files in other folders)
